2005-07-27  Stepan Kasal  <kasal@ucw.cz>

	* lib/autotest/general.m4 (_AT_DECIDE_TRACEABLE): The symbol at_reason
	was pushdef'ed twice while popped only once.  Push it only once.

2005-07-26  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/status.m4 (_AC_OUTPUT_SUBDIRS): The message is now
	prefixed by mere "===", not "configure: === ".

2005-07-25  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.maint: Update from Bison.

	* lib/m4sugar/m4sugar.m4 (m4_strip): Comment fix---change tab to
	"<tab>" in comment, so that the point is understandable.

2005-07-25  Stepan Kasal  <kasal@ucw.cz>

	Rewrite substantial part of lib/autoconf/status.m4.
	The main change is that CONFIG_FILES, CONFIG_HEADERS, CONFIG_LINKS,
	and CONFIG_COMMANDS are not processed in four separate loops.
	Instead, there is one main loop.  This alows that the common code
	is expanded only once, thus config.status (and configure) is smaller.

	The registration mechnism in AC_CONFIG_FILES and cousins also changed;
	the AC_LIST_FILES and cousins macros are no longer used.

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS,
	_AC_OUTPUT_LINKS, _AC_OUTPUT_COMMANDS): Renamed to ...
	(_AC_OUTPUT_FILE, _AC_OUTPUT_HEADER, _AC_OUTPUT_LINK,
	_AC_OUTPUT_COMMAND): ..., respectively.  These macros no longer
	contain the initialization, nor the for loop, nor the associated
	commands; all these go to ...
	(_AC_OUTPUT_MAIN_LOOP): ... this new macro, called from
	_AC_OUTPUT_CONFIG_STATUS.
	(_AC_CONFIG_SPLIT, _AC_CONFIG_SPLIT_SOURCE_DEST, _AC_CONFIG_SPLIT_FILE_IN):
	Nuked; the code was merged into _AC_OUTPUT_MAIN_LOOP.
	(_AC_OUTPUT_FILE): The creation of the sed script ...
	(AC_OUTPUT): ... and the setup of ac_vpsub goes to ...
	(_AC_OUTPUT_FILES_PREPARE): ... a new macro, also called from
	_AC_OUTPUT_MAIN_LOOP.
	(_AC_CONFIG_FILES, _AC_CONFIG_HEADERS, _AC_CONFIG_LINKS,
	_AC_CONFIG_COMMANDS): Use ...
	(_AC_CONFIG_FOOS): ... this new macro, which uses these ...